Create web page style/display for books

--- a/index.html
+++ b/index.html
@@ -9,6 +9,57 @@
 </head>
 
 <body>
+    <div class="header">
+        <h1>Library</h1>
+    </div>
+    <div class="content">
+        <div class="container">
+            <div class="card">
+                <h3>Title</h3>
+                <h3>Author</h3>
+                <h3>Pages</h3>
+                <button>Read</button>
+                <button>Remove</button>
+            </div>
+            <div class="card">
+                <h3>Title</h3>
+                <h3>Author</h3>
+                <h3>Pages</h3>
+                <button>Read</button>
+                <button>Remove</button>
+            </div>
+            <div class="card">
+                <h3>Title</h3>
+                <h3>Author</h3>
+                <h3>Pages</h3>
+                <button>Read</button>
+                <button>Remove</button>
+            </div>
+            <div class="card">
+                <h3>Title</h3>
+                <h3>Author</h3>
+                <h3>Pages</h3>
+                <button>Read</button>
+                <button>Remove</button>
+            </div>
+            <div class="card">
+                <h3>Title</h3>
+                <h3>Author</h3>
+                <h3>Pages</h3>
+                <button>Read</button>
+                <button>Remove</button>
+            </div>
+            <div class="card">
+                <h3>Title</h3>
+                <h3>Author</h3>
+                <h3>Pages</h3>
+                <button>Read</button>
+                <button>Remove</button>
+            </div>
+
+        </div>
+    </div>
+
     <script src="script.js"></script>
 </body>
 
