Add class names to card elements

--- a/index.html
+++ b/index.html
@@ -15,46 +15,46 @@
     <div class="content">
         <div class="container">
             <div class="card">
-                <h3>Title</h3>
-                <h3>Author</h3>
-                <h3>Pages</h3>
-                <button>Read</button>
-                <button>Remove</button>
+                <h3 class="title">Title</h3>
+                <h3 class="author">Author</h3>
+                <h3 class="pages">Pages</h3>
+                <button class="read">Read</button>
+                <button class="remove">Remove</button>
             </div>
             <div class="card">
-                <h3>Title</h3>
-                <h3>Author</h3>
-                <h3>Pages</h3>
-                <button>Read</button>
-                <button>Remove</button>
+                <h3 class="title">Title</h3>
+                <h3 class="author">Author</h3>
+                <h3 class="pages">Pages</h3>
+                <button class="read">Read</button>
+                <button class="remove">Remove</button>
             </div>
             <div class="card">
-                <h3>Title</h3>
-                <h3>Author</h3>
-                <h3>Pages</h3>
-                <button>Read</button>
-                <button>Remove</button>
+                <h3 class="title">Title</h3>
+                <h3 class="author">Author</h3>
+                <h3 class="pages">Pages</h3>
+                <button class="read">Read</button>
+                <button class="remove">Remove</button>
             </div>
             <div class="card">
-                <h3>Title</h3>
-                <h3>Author</h3>
-                <h3>Pages</h3>
-                <button>Read</button>
-                <button>Remove</button>
+                <h3 class="title">Title</h3>
+                <h3 class="author">Author</h3>
+                <h3 class="pages">Pages</h3>
+                <button class="read">Read</button>
+                <button class="remove">Remove</button>
             </div>
             <div class="card">
-                <h3>Title</h3>
-                <h3>Author</h3>
-                <h3>Pages</h3>
-                <button>Read</button>
-                <button>Remove</button>
+                <h3 class="title">Title</h3>
+                <h3 class="author">Author</h3>
+                <h3 class="pages">Pages</h3>
+                <button class="read">Read</button>
+                <button class="remove">Remove</button>
             </div>
             <div class="card">
-                <h3>Title</h3>
-                <h3>Author</h3>
-                <h3>Pages</h3>
-                <button>Read</button>
-                <button>Remove</button>
+                <h3 class="title">Title</h3>
+                <h3 class="author">Author</h3>
+                <h3 class="pages">Pages</h3>
+                <button class="read">Read</button>
+                <button class="remove">Remove</button>
             </div>
 
         </div>
