Create function to display book cards

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
                 <h3 class="title">Title</h3>
                 <h3 class="author">Author</h3>
                 <h3 class="pages">Pages</h3>
-                <button class="read">Read</button>
-                <button class="remove">Remove</button>
+                <button class="read-button">Read</button>
+                <button class="remove-button">Remove</button>
             </div>
 
         </div>
