Create form popup after 'add book' button is clicked

--- a/index.html
+++ b/index.html
@@ -13,41 +13,63 @@
         <h1>Library</h1>
     </div>
     <div class="content">
+        <button class="add-book-button" onclick="openForm()">
+            <h2>+ Add Book</h2>
+        </button>
+
+        <div class="form-popup">
+            <form class="form-container" action="">
+                <h2>Add New Book</h2>
+                <label for="title"></label>
+                <input type="text" placeholder="Title" required>
+                <label for="author"></label>
+                <input type="text" placeholder="Author" required>
+                <label for="pages"></label>
+                <input type="number" placeholder="Pages" required>
+                <div class="read">
+                    <h3>Have you read it?</h3>
+                    <label for="read"></label>
+                    <input type="checkbox">
+                </div>
+                <button class="submit" type="submit">Submit</button>
+            </form>
+        </div>
+
         <div class="container">
             <div class="card">
                 <h3 class="title">Title</h3>
                 <h3 class="author">Author</h3>
                 <h3 class="pages">Pages</h3>
-                <button class="read">Read</button>
-                <button class="remove">Remove</button>
+                <button class="read-button">Read</button>
+                <button class="remove-button">Remove</button>
             </div>
             <div class="card">
                 <h3 class="title">Title</h3>
                 <h3 class="author">Author</h3>
                 <h3 class="pages">Pages</h3>
-                <button class="read">Read</button>
-                <button class="remove">Remove</button>
+                <button class="read-button">Read</button>
+                <button class="remove-button">Remove</button>
             </div>
             <div class="card">
                 <h3 class="title">Title</h3>
                 <h3 class="author">Author</h3>
                 <h3 class="pages">Pages</h3>
-                <button class="read">Read</button>
-                <button class="remove">Remove</button>
+                <button class="read-button">Read</button>
+                <button class="remove-button">Remove</button>
             </div>
             <div class="card">
                 <h3 class="title">Title</h3>
                 <h3 class="author">Author</h3>
                 <h3 class="pages">Pages</h3>
-                <button class="read">Read</button>
-                <button class="remove">Remove</button>
+                <button class="read-button">Read</button>
+                <button class="remove-button">Remove</button>
             </div>
             <div class="card">
                 <h3 class="title">Title</h3>
                 <h3 class="author">Author</h3>
                 <h3 class="pages">Pages</h3>
-                <button class="read">Read</button>
-                <button class="remove">Remove</button>
+                <button class="read-button">Read</button>
+                <button class="remove-button">Remove</button>
             </div>
             <div class="card">
                 <h3 class="title">Title</h3>
