--- a/index.html
+++ b/index.html
@@ -17,69 +17,26 @@
             <h2>+ Add Book</h2>
         </button>
 
+        <!--Form is intially hidden-->
         <div class="form-popup">
-            <form class="form-container" action="">
+            <form class="form-container" action="" onsubmit="submitForm(event)">
                 <h2>Add New Book</h2>
                 <label for="title"></label>
-                <input type="text" placeholder="Title" required>
+                <input type="text" placeholder="Title" id="title" required>
                 <label for="author"></label>
-                <input type="text" placeholder="Author" required>
+                <input type="text" placeholder="Author" id="author" required>
                 <label for="pages"></label>
-                <input type="number" placeholder="Pages" required>
+                <input type="number" placeholder="Pages" id="pages" required>
                 <div class="read">
                     <h3>Have you read it?</h3>
                     <label for="read"></label>
-                    <input type="checkbox">
+                    <input type="checkbox" id="read">
                 </div>
                 <button class="submit" type="submit">Submit</button>
             </form>
         </div>
 
-        <div class="container">
-            <div class="card">
-                <h3 class="title">Title</h3>
-                <h3 class="author">Author</h3>
-                <h3 class="pages">Pages</h3>
-                <button class="read-button">Read</button>
-                <button class="remove-button">Remove</button>
-            </div>
-            <div class="card">
-                <h3 class="title">Title</h3>
-                <h3 class="author">Author</h3>
-                <h3 class="pages">Pages</h3>
-                <button class="read-button">Read</button>
-                <button class="remove-button">Remove</button>
-            </div>
-            <div class="card">
-                <h3 class="title">Title</h3>
-                <h3 class="author">Author</h3>
-                <h3 class="pages">Pages</h3>
-                <button class="read-button">Read</button>
-                <button class="remove-button">Remove</button>
-            </div>
-            <div class="card">
-                <h3 class="title">Title</h3>
-                <h3 class="author">Author</h3>
-                <h3 class="pages">Pages</h3>
-                <button class="read-button">Read</button>
-                <button class="remove-button">Remove</button>
-            </div>
-            <div class="card">
-                <h3 class="title">Title</h3>
-                <h3 class="author">Author</h3>
-                <h3 class="pages">Pages</h3>
-                <button class="read-button">Read</button>
-                <button class="remove-button">Remove</button>
-            </div>
-            <div class="card">
-                <h3 class="title">Title</h3>
-                <h3 class="author">Author</h3>
-                <h3 class="pages">Pages</h3>
-                <button class="read-button">Read</button>
-                <button class="remove-button">Remove</button>
-            </div>
-
-        </div>
+        <div class="container"></div>
     </div>
 
     <script src="script.js"></script>
