Modify function to close form and execute it when user cancels form

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                     <input type="checkbox" id="read">
                 </div>
                 <button class="submit" type="submit">Submit</button>
+                <button class="cancel" type="button" onclick="closeForm()">Cancel</button>
             </form>
         </div>
 
