Implement simple form verification with JS

--- a/index.html
+++ b/index.html
@@ -19,14 +19,17 @@
 
         <!--Form is intially hidden-->
         <div class="form-popup">
-            <form class="form-container" action="" onsubmit="submitForm(event)">
+            <form class="form-container" action="">
                 <h2>Add New Book</h2>
                 <label for="title"></label>
                 <input type="text" placeholder="Title" id="title" required>
+                <span class="error-text" id="title-error">This field is required.</span>
                 <label for="author"></label>
                 <input type="text" placeholder="Author" id="author" required>
+                <span class="error-text" id="author-error">This field is required.</span>
                 <label for="pages"></label>
                 <input type="number" placeholder="Pages" id="pages" required>
+                <span class="error-text" id="pages-error">This field is required.</span>
                 <div class="read">
                     <h3>Have you read it?</h3>
                     <label for="read"></label>
